--- a/package.json
+++ b/package.json
@@ -16,7 +16,19 @@
     "htmlhint": "^0.10.1"
   },
   "devDependencies": {
-    "jest": "^24.8.0",
-    "mocha": "^5.2.0"
-  }
+    "jest": "^24.8.0"
+  },
+  "description": "<p align=\"center\">\r  <img src=\"src/img/pgo_logo.png\">\r </p>",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/montezakarim/LIM010-data-lovers.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/montezakarim/LIM010-data-lovers/issues"
+  },
+  "homepage": "https://github.com/montezakarim/LIM010-data-lovers#readme"
 }
